--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Digg - Agency for Digital Government
+#
+# SPDX-License-Identifier: CC0-1.0
+
 name: CI/CD Pipeline
 
 # Trigger the workflow on push or pull request
